kube/resources/controller.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: engine-core
  name: poozle-controller-svc
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
  selector:
    poozle: controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: engine-core
  name: poozle-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      poozle: controller
  template:
    metadata:
      labels:
        poozle: controller
    spec:
      serviceAccountName: poozle-admin
      automountServiceAccountToken: true
      containers:
        - name: poozle-controller-container
          image: poozle/controller
          ports:
            - containerPort: 3000
      # nodeSelector:
      #   role: core
