kube/resources/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: poozle-server-svc
spec:
  type: NodePort
  ports:
    - port: 8001
      protocol: TCP
  selector:
    poozle: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poozle-server
spec:
  replicas: 1
  selector:
    matchLabels:
      poozle: server
  template:
    metadata:
      labels:
        poozle: server
    spec:
      containers:
        - name: poozle-server-container
          image: poozle/server
          ports:
            - containerPort: 8001
      nodeSelector:
        role: core
