kube/resources/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: poozle-webapp-svc
  namespace: engine
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    poozle: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: engine
  name: poozle-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      poozle: webapp
  template:
    metadata:
      labels:
        poozle: webapp
    spec:
      containers:
        - name: poozle-webapp-container
          image: poozlehq/engine-webapp
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /authentication/signin
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /authentication/signin
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
          ports:
            - containerPort: 3000
      # nodeSelector:
      #   role: core
