kube/resources/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poozle-gateway-ingress
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
    kubernetes.io/ingress.global-static-ip-name: poozle
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: graphql.poozle.dev
      http:
        paths:
          - backend:
              service:
                name: default
                port:
                  number: 80
            path: /default/*
            pathType: ImplementationSpecific
